--- a/style.css
+++ b/style.css
@@ -71,3 +71,53 @@ img {
 .clear {
   clear: both;
 }
+
+/* CSS Media Query per small screens */
+
+@media screen and (max-width: 420px) {
+
+  /* Rimodulazione delle righe */
+  .row {
+    width: 100%;
+    margin-top: 30px;
+  }
+  /* Impostazione font più leggibile per mobile */
+  body {
+    font-family: tahoma;
+    font-size: 0.9em;
+  }
+  /* Resizing dimensioni immagini */
+  #lezioni .row img {
+    width: 200px;
+    height: auto;
+  }
+  /* Colonne a pieno width, senza float e con margine superiore */
+  #lezioni .row>.left,
+  #lezioni .row>.right {
+    width: 100%;
+    float: none;
+    margin-top: 50px;
+  }
+  /* Colonne a pieno width, senza float e con margine superiore */
+  #steps .row>.left,
+  #steps .row>.central,
+  #steps .row>.right {
+    float: none;
+    width: 100%;
+    margin-top: 50px;
+  }
+  /* Colonne a pieno width e con margine superiore */
+  #why .row>.first,
+  #why .row>.second,
+  #why .row>.third {
+    width: 100%;
+    margin-top: 50px;
+  }
+  /* Adattamento immagini e rimozione padding */
+  #why .row img {
+    padding: 0;
+    width: 200px;
+    height: auto;
+  }
+
+}
