--- a/style.css
+++ b/style.css
@@ -95,14 +95,14 @@ img {
   #lezioni .row>.left,
   #lezioni .row>.right {
     width: 100%;
-    float: none;
+    float: none; /* Superfluo per via del width: 100% */
     margin-top: 50px;
   }
   /* Colonne a pieno width, senza float e con margine superiore */
   #steps .row>.left,
   #steps .row>.central,
   #steps .row>.right {
-    float: none;
+    float: none; /* Superfluo per via del width: 100% */
     width: 100%;
     margin-top: 50px;
   }
